@@ -1,3 +1,11 @@
+2008-08-07  Jens Granseuer  <jensgr@gmx.net>
+
+	Based on a patch by: Bastien Nocera <hadess@hadess.net>
+
+	* sound-properties.glade:
+	* sound-theme-definition.h: HIG fixes and improved wording (bug
+	#545219)
+
 2008-08-06  Jens Granseuer  <jensgr@gmx.net>
 
 	* sound-properties-capplet.c: (create_dialog): fix warning due to
